# 8909go_prop

./: README.md  READme.txt
SmartCardService/: Android.mk
android-perf/: profiles.mk
android-perf/activity_trigger/: qti-activity_trigger.cpp
android-perf/gamed/: Android.mk  ConfidenceValues.cpp  ConfidenceValues.h  Config.cpp  Config.h  GameComm.cpp  GameDaemon.cpp  GameDetection.cpp  GameDetection.h  GameServer.cpp  GameServer.h  Input.cpp  Input.h  Stats.cpp  Stats.h  WhiteLists.cpp  WhiteLists.h
android-perf/io-p/: Android.bp  Android.mk  client.cpp  client.h  io-p.cpp  io-p.h
android-perf/iop-hal/: Android.bp  Android.mk  Iop.cpp  Iop.h  service.cpp
android-perf/mp-ctl/: BoostConfigReader.cpp  BoostConfigReader.h  MpctlUtils.cpp  MpctlUtils.h  OptsData.cpp  OptsData.h  OptsHandler.cpp  OptsHandler.h  RestoreHandler.cpp  Target.cpp  Target.h  TargetInit.cpp  mp-ctl.cpp  mp-ctl.h
android-perf/perf-hal/: Perf.cpp
biometrics/iris/: Android.mk
bt/hci_qcomm_init/: btqsocnvmtags.c
common/config/: device-vendor.mk  public.libraries.txt
common/msm8909/: BoardConfigVendor.mk
common/msm8909go/: BoardConfigVendor.mk
common/msm8937_64/: BoardConfigVendor.mk
common/msm8996_gvmq/: BoardConfigVendor.mk
common/qcs605/: BoardConfigVendor.mk
common/sdm660_32/: BoardConfigVendor.mk
common/sdm660_64/: BoardConfigVendor.mk
common/sdm710/: BoardConfigVendor.mk
data/ipa_fws/: Android.mk  Makefile.am
data/port-bridge/: port_bridge.c
diag/: configure.ac
diag/include/: diag_lsm.h  diagcmd.h  event_defs.h  msg.h
diag/jni/: Android.mk
diag/klog/: diag_klog.c
diag/mdlog/: Android.mk  diag_mdlog.c
diag/socket_log/: diag_socket_log.c
diag/src/: Android.mk  diag_lsm.c  diag_lsm_dci.c  diag_lsm_msg.c  diag_lsmi.h  diag_qshrink4_db_parser.c  diag_shared_i.h  msg_arrays_i.c  ts_linux.c
display/qdcm_ff/: Android.mk
fastmmi/: Android.mk  mmi.mk
fastmmi/libmmi/: Android.mk  common.h  libgps.h  util_comm.cpp  utils.h
fastmmi/mmi/: Android.mk  config.cpp  config.h  draw.cpp  func_map.cpp  input.cpp  mmi.cpp  mmi.h  mmi_cfg.cpp  module.cpp
ftm/: Makefile  ftm_main.c  ftm_write_to_flash.c
ftm/wds/: wds_hci_pfal_linux.c
gps/: Android.mk
gps/SnapdragonSDKTest/: AndroidManifest.xml
gps/framework/: AndroidManifest.xml
gps/garden-app/: configure.ac
gps/garden-app/GARDEn/: Android.mk  GardenAPIClient.cpp  GardenAPIClient.h  Makefile.am  garden_app_session_tracker.cpp  garden_app_session_tracker.h  location_callbacks_garden.h  test_android_gps.cpp  test_android_gps.h
gps/garden-app/GARDEn/android_runtime/: AndroidRuntime.h
gps/launcher/: Android.mk  Makefile.am  configure.ac  process_launcher.c  start_loc_launcher
gps/location-xtra/: configure.ac
gps/location_hal_test/: Android.mk  Makefile.am  configure.ac  location-hal-tests.pc.in  location_hal_test.cpp
gps/slim/: Android.mk  Makefile.am  configure.ac
gps/ulp2/: configure.ac
ims-ship/: Android.mk
ims-ship/vtext/: Android.mk
mm-audio/: Android.mk
mm-audio/audio-alsa/: Android.mk
mm-audio/audio-effects/: configure.ac
mm-audio/audio-log-utils/: audio_dynamic_log.xml
mm-audio/audio-parsers/: Android.mk
mm-audio/audio_ftm/: configure.ac
mm-audio/omx/: Makefile.am  configure.ac
mm-audio/omx/adec-aac/qdsp6/: Android.mk  Makefile.am
mm-audio/omx/adec-aac/qdsp6/inc/: omx_aac_adec.h
mm-audio/omx/adec-aac/qdsp6/src/: omx_aac_adec.cpp
mm-audio/omx/adec-wma/qdsp6/: Android.mk  Makefile.am
mm-audio/qap_wrapper/: Makefile.am
mm-audio/qsthw_api/: Makefile.am  qsthw_api.c  qsthw_defs.h  qsthw_test.c
mm-audio/sound_trigger/: Android.mk  sound_trigger_prop_intf.h
mm-audio/sound_trigger_hal/: Android.mk  Makefile.am  sound_trigger_hw.c  sound_trigger_hw.h  sound_trigger_platform.c  sound_trigger_platform.h  sound_trigger_prop_intf.h  st_common_defs.h  st_hw_session.h  st_hw_session_gcs.c  st_hw_session_gcs.h  st_hw_session_lsm.c  st_hw_session_lsm.h  st_hw_session_pcm.c  st_hw_session_pcm.h  st_session.c  st_session.h
mm-audio/surround_sound/: Makefile.am
mm-audio/voiceprint/: Android.mk
mm-osal/: Android.mk
mm-parser/Android_adaptation/: Android.mk
mm-still/codec_v1/: Android.mk
mm-still/jpeg2/: Android.mk
mm-video-utils/vtest-omx/: Android.mk
mm-video/omx_vpp/: Android.mk
prebuilt_HY11/: AU_INFO.txt  Android.bp  Android.mk
qcril-hal/qcril_qmi/: qcril_other.cc  qcril_pbm.cc  qcril_qmi_pdc.cc  qcril_qmi_voice.cc
qcril-qmi-services/: user_identity_module_v01.c  user_identity_module_v01.h
qcril/qcril_database/: qcril.sql
qcril/qcril_qmi/: qcril.c  qcril_qmi_nas.c  qcril_qmi_sms.c  qcril_qmi_voice.c  qcril_qmi_voice.h
qdssagent/: qdss.agent.sh
qmi-framework/inc/: qmi_fw_debug.h
qmi/data/: data_system_determination_v01.c  data_system_determination_v01.h  wireless_data_service_v01.c  wireless_data_service_v01.h
qmi/inc/: qmi_atcop_srvc.h
qmi/qmuxd/: qmi_platform.c
quec-server/: Android.mk  QuecService
remotefs/qmi_rmt_storage/: Android.mk  rmt_storage_svc.c
scve/: Android.mk
scve/reference/: Android.mk  common.mk
securemsm/FIDO/: Android.mk
securemsm/GPTEE/: Android.mk
securemsm/Qmp/: Android.mk
securemsm/daemon/: Android.mk  qseecomd.c
securemsm/drm/: Android.mk
securemsm/keymaster_install_toolbox/: Android.mk  DeviceIdProvision.cpp
securemsm/keymaster_utils/: KeymasterUtils.h  (+2 more)
sensors/: Android.mk
thermal-engine/: Android.mk  Makefile.am  configure.ac  speaker_cal-data.c  ss-data.c  ss_algorithm.c  thermal_monitor-data-8916.c  thermal_monitor-data.c  thermal_monitor.c  thermal_util.c
time-services/: time_daemon_qmi.c  time_genoff_qmi.c
wfd/: Android.mk
(+1730 files in other folders)
